@@ -1,5 +1,11 @@
 2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* server-src/amoverview.pl.in: update usage information,
+	-config is no longer needed for ccompatibility with other program.
+	* man/amoverview.8.in: -config is no longer needed.
+
+2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/amadmin.c (usage): show disklist command.
 
 2000-09-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
@@ -946,7 +952,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.370 2000/09/24 17:12:36 martinea Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.371 2000/09/24 18:01:02 martinea Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
